--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<meta charset="utf-8">
+	<title>Emily lab web</title>
 </head>
 <body>
-<h1>Hello Coursera! Hello Emily</h1>
+<h1>Try to build a lab web </h1>
+<div>
+	Lab order list:
+	<ul>
+		<li>Medias</li>
+		<li>Office support</li>
+		<li>Primers</li>
+		<ol>
+			<li>Myc</li>
+			<li>IL8</li>
+		</ol>
+	</ul>
+</div>
+<h1>Agent link</h1>
+<section>
+	<ul>
+		<!--Link to ever section in the page-->
+		<li><a href="#section1">#section1</a></li> 
+		<li><a href="#section2">#section2</a></li>
+	</ul>
+</section>
+<section id="section1">
+	<h2>(#section1) Section1</h2>
+	We can go to differet agent:
+	<a href="https://www.fishersci.com/us/en/home1.html" target="_blank" title="Fisher">Link to Fisher company</a>
+	<img src="https://www.fishersci.com/us/en/home.html" width="200" height="200">
+	<a href="https://us.vwr.com" title="VWR"><div>Link to VWR company</div></a>
+</section>
+<div>
+	<h2><a name="section2">(#section2) Section2</a></h2>
+	<p>
+		Back to top: <a href="#top">Back to Top</a>
+	</p>
+</div>
 </body>
 </html>
