--- a/site/index.html
+++ b/site/index.html
@@ -2,42 +2,16 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Emily lab web</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/external.css">
+	<title>Emily Assingment Solution for Module2</title>
+
 </head>
 <body>
-<h1>Try to build a lab web </h1>
-<div>
-	Lab order list:
-	<ul>
-		<li>Medias</li>
-		<li>Office support</li>
-		<li>Primers</li>
-		<ol>
-			<li>Myc</li>
-			<li>IL8</li>
-		</ol>
-	</ul>
-</div>
-<h1>Agent link</h1>
-<section>
-	<ul>
-		<!--Link to ever section in the page-->
-		<li><a href="#section1">#section1</a></li> 
-		<li><a href="#section2">#section2</a></li>
-	</ul>
-</section>
-<section id="section1">
-	<h2>(#section1) Section1</h2>
-	We can go to differet agent:
-	<a href="https://www.fishersci.com/us/en/home1.html" target="_blank" title="Fisher">Link to Fisher company</a>
-	<img src="https://www.fishersci.com/us/en/home.html" width="200" height="200">
-	<a href="https://us.vwr.com" title="VWR"><div>Link to VWR company</div></a>
-</section>
-<div>
-	<h2><a name="section2">(#section2) Section2</a></h2>
-	<p>
-		Back to top: <a href="#top">Back to Top</a>
-	</p>
-</div>
+<h1 align="center">Our Menu</h1>
+<div class="row">
+  <div class="col-lg-4 col-md-6"><p>Item 1</p></div>
+  <div class="col-lg-4 col-md-6"><p>Item 2</p></div>
+  <div class="col-lg-4 col-md-6"><p>Item 3</p></div>
 </body>
 </html>
