--- a/site/index.html
+++ b/site/index.html
@@ -5,13 +5,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/external.css">
 	<title>Emily Assingment Solution for Module2</title>
-
 </head>
+
 <body>
-<h1 align="center">Our Menu</h1>
-<div class="row">
-  <div class="col-lg-4 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-4 col-md-6"><p>Item 2</p></div>
-  <div class="col-lg-4 col-md-6"><p>Item 3</p></div>
+	<h1>Our Menu</h1>
+	<div class="row">
+ 	 <div class="col-lg-4 col-md-6 col-sm-8">
+ 	 	<h2>Chicken</h2>
+ 	 	<p>Item 1</p>
+ 	 </div>
+ 	 <div class="col-lg-4 col-md-6 col-sm-8">
+		<h2>Beef</h2>
+ 	 	<p>Item 2</p>
+ 	 </div>
+ 	 <div class="col-lg-4 col-md-6 col-sm-8">
+ 	 	<h2>Sushi</h2>
+ 	 	<p>Item 3</p>
+ 	 </div>
+	</div>
 </body>
 </html>
